--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
+    "eslint": "./node_modules/.bin/eslint . --ext .ts",
+    "clean": "rm -rf ./{bin,lib,test}/{**,}/{*.d.ts,*.js}",
     "test": "jest",
     "cdk": "cdk"
   },
