--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.26.0",
+    "@types/config": "^0.0.36",
     "@types/jest": "^24.0.22",
     "@types/node": "10.17.5",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
