--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -27,4 +27,5 @@ rules:
   import/no-unresolved: error
   import/prefer-default-export: off
   no-new: off
+  no-unused-vars: off
   no-useless-constructor: off
