--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-cloudfront": "^1.26.0",
+    "@aws-cdk/aws-route53": "^1.26.0",
     "@aws-cdk/aws-s3": "^1.26.0",
     "@aws-cdk/core": "1.26.0",
     "config": "^3.3.0",
